--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-phone-input-2": "^2.15.1",
     "react-router": "^6.26.1",
     "react-router-dom": "^6.26.1",
