--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -16,8 +16,9 @@
 
     /* Linting */
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "noEmitOnError": false,
     "noFallthroughCasesInSwitch": true,
     "baseUrl": ".",
     "paths": {
